@@ -1,3 +1,9 @@
+2011-01-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
+
+	* pop3.tcl: Extended package with STARTTLS support provided by
+	* pop3.man: Pascal Scheffers. This switches a regular connection
+	* pkgIndex.tcl: over to SSL/TLS. Version bumped to 1.8.
+
 2009-12-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	*
